[gd_scene format=3]

[ext_resource type="Script" path="res://scenes/ShopMenu.gd" id="1_shop"]

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="TextureButton" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Crystal Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="PacksGrid" type="GridContainer" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ConfirmPopup" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ConfirmPopup"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="ConfirmPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ConfirmTitle" type="Label" parent="ConfirmPopup/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm Purchase"
horizontal_alignment = 1

[node name="ConfirmMessage" type="Label" parent="ConfirmPopup/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy 100 crystals for $0.99?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="ConfirmPopup/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmBuyBtn" type="Button" parent="ConfirmPopup/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Buy"

[node name="CancelBtn" type="Button" parent="ConfirmPopup/MarginContainer/VBox/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Cancel"
